refactor MealsWithExcessCollector