@@ -34,11 +34,14 @@ public class MealsWithExcessCollector implements Collector<UserMeal, HashMap<Loc
 
     @Override
     public BiConsumer<HashMap<LocalDate, Pair<List<UserMeal>, Integer>>, UserMeal> accumulator() {
-        return (map, userMeal) -> map.merge(userMeal.getDateTime().toLocalDate(), new Pair<>(Collections.singletonList(userMeal), userMeal.getCalories()),
+        return (map, userMeal) -> map.merge(userMeal.getDateTime().toLocalDate(), TimeUtil.isBetweenHalfOpen(userMeal.getDateTime().toLocalTime(), startTime, endTime)
+                        ? new Pair<>(Collections.singletonList(userMeal), userMeal.getCalories())
+                        : new Pair<>(new ArrayList<>(), userMeal.getCalories()),
                 (prev, one) -> {
-                    List<UserMeal> newList = new ArrayList<>();
-                    newList.addAll(prev.getFirst());
-                    newList.addAll(one.getFirst());
+                    List<UserMeal> newList = new ArrayList<>(prev.getFirst());
+                    if (!one.getFirst().isEmpty()) {
+                        newList.add(one.getFirst().get(0));
+                    }
                     return new Pair<>(newList, prev.getSecond() + one.getSecond());
                 });
     }
@@ -48,8 +51,7 @@ public class MealsWithExcessCollector implements Collector<UserMeal, HashMap<Loc
         return (map1, map2) -> {
             HashMap<LocalDate, Pair<List<UserMeal>, Integer>> map3 = new HashMap<>(map1);
             map2.forEach((key, value) -> map3.merge(key, value, (prev, one) -> {
-                List<UserMeal> newList = new ArrayList<>();
-                newList.addAll(prev.getFirst());
+                List<UserMeal> newList = new ArrayList<>(prev.getFirst());
                 newList.addAll(one.getFirst());
                 return new Pair<>(newList, prev.getSecond() + one.getSecond());
             }));
@@ -62,9 +64,7 @@ public class MealsWithExcessCollector implements Collector<UserMeal, HashMap<Loc
     public Function<HashMap<LocalDate, Pair<List<UserMeal>, Integer>>, List<UserMealWithExcess>> finisher() {
         return map -> map.values().stream()
                 .flatMap(pair -> pair.getFirst().stream()
-                        .filter(userMeal -> TimeUtil.isBetweenHalfOpen(userMeal.getDateTime().toLocalTime(), startTime, endTime))
-                        .map(userMeal -> new Pair<>(userMeal, pair.getSecond())))
-                .map(pair -> UserMealsUtil.convertUserMealToUserMealWithExcess(pair.getFirst(), pair.getSecond() > caloriesPerDay))
+                        .map(userMeal -> UserMealsUtil.convertUserMealToUserMealWithExcess(userMeal, pair.getSecond() > caloriesPerDay)))
                 .collect(Collectors.toList());
     }
 
